# goby_ros_examples

./: CMakeLists.txt  README.md  package.xml
include/goby_ros_examples/: nav.proto
launch/: goby_publish_json.sh  goby_publish_protobuf.sh  goby_ros_json.launch  goby_ros_protobuf.launch  goby_ros_rmcwg_oct2024_goby_to_ros.launch  goby_ros_rmcwg_oct2024_ros_to_goby.launch
msg/: ProtobufEncoded.msg  ProtobufJSON.msg
scripts/: nav_json_publisher.py
src/: example_json.cpp  example_protobuf.cpp  ros_protobuf_encoded_subscriber.cpp
src/nodes/: ros_protobuf_encoded_publisher.cpp
src/plugins/: example_json.cpp  example_protobuf_minimal.cpp
